--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Scores#index</h1>
-<p>Find me in app/views/scores/index.html.erb</p>
+<div class="col-lg-5 mt-5">
+    <%= form_with url: scores_path, method: :get, local: true do |f|%>
+     <div class="col-lg-3">
+       <%= f.text_field :keyword, class: "form-control"%>
+     </div>
+     <div class="col-lg-2 mt-3">
+       <%= f.submit '検索', class: "form-control btn btn-success"%>
+     </div>
+    <% end %>
+</div>
