検索機能等

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
             <%=link_to "マイページ", user_path(@user) %>
             <%=link_to "質問箱", messerges_path %>
             <%=link_to "スコア管理", scores_path %>
+            <%=link_to "ユーザー検索", search_users_path %>
           <% else %>
             <%=link_to "About", homes_about_path %>
             <%=link_to "ログイン", new_user_session_path %>
