--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: user, local: true) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(user.errors.count, "つ") %> の項目が空白です。</h2>
 
       <ul>
       <% user.errors.full_messages.each do |message| %>
@@ -12,26 +12,21 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
   </div>
 
   <div class="field">
-    <%= form.label :introduction %>
-    <%= form.text_area :introduction %>
-  </div>
-
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.text_field :password %>
+    <%= f.label :introduction %>
+    <%= f.text_area :introduction %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit "編集完了",class:"btn btn-primary" %>
   </div>
 <% end %>
