--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,19 +1,19 @@
-<h1>ユーザー検索</h1>
-<%= form_with url: search_users_path, method: :get, local: true do |f| %>
-  <%= f.text_field :name %>
-  <%= f.submit :search, class:"btn btn-primary" %>
-<% end %>
-<table class="text-light">
-  <thead>
+<div class="text-center">
+  <h1>ユーザー検索</h1>
+  <%= form_with url: search_users_path, method: :get, local: true do |f| %>
+    <%= f.text_field :name %>
+    <%= f.submit :search, class:"btn btn-primary" %>
+  <% end %>
+  <h4>ユーザー名</h4>
+  <% @users.each do |user| %>
     <tr>
-      <th>ユーザー名</th>
+      <td><%= user.name %></td>
+      <td><% if current_user.following?(user.id) %>
+            <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST, class:"btn btn-primary" %>
+          <% else %>
+            <%= link_to 'フォローする', follow_path(user.id), method: :POST, class:"btn btn-primary"  %>
+          <% end %>
+      </td>
     </tr>
-  </thead>
-  <tbody class="pt-5">
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <% end %>
+</div>
