--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Courses#index</h1>
-<p>Find me in app/views/courses/index.html.erb</p>
+<div class="golfcourse-block">
+	<h1>ラウンドするゴルフ場を選択</h1>
+	<%= form_tag(courses_path,:method => 'get', local: true) do %>
+		<%= label :keyword, "ゴルフ場名を検索" %>
+		<%= text_field_tag :keyword, "" %>
+		<%= submit_tag 'ゴルフ場を検索', :golfcoursename => nil%>
+	<% end %>
+</div>
+
+<%= form_with url:scores_first_half_path do |f| %>
+		<%= f.label :played_date, "ラウンドする日" %>
+		<%= f.date_select :played_date, {require: true, use_month_numbers: true}%><br>
+		<div id="search_result">
+			<% if @items == [] %>
+				<p>該当するゴルフ場がみつかりません。</p>
+			<% else %>
+				<% @items.each do |item| %>
+					<div class="">
+					  <%= f.radio_button :course_id, require: true %>
+						<p class=""><%= item.golf_course_name %></p>
+						<div class="">
+							<div class=""><%= item.golf_course_caption %></div>
+						</div>
+					</div>
+				<% end %>
+				<%= f.submit 'ラウンドを開始する',class: "golfcourse-block__startbutton" %>
+			<% end %>
+	<% end %>
+
