--- a/app/views/messerges/index.html.erb
+++ b/app/views/messerges/index.html.erb
@@ -1,5 +1,4 @@
 <h1 class="text-light text-center mt-5">質問投稿</h1>
-<!-- form_with部分 -->
 <%= form_with model:@messerge, local:true do |f| %>
   <h4 class="text-light text-center mt-5">本文</h4>
   <div class="text-center mt-5">
@@ -15,18 +14,16 @@
 
 <table class="mt-5 text-center">
   <tbody class="text-light mt-5 text-center">
-
-
-
     <% @messerges.each do |messerge| %>
       <tr class="center-block">
 
         <th><%= messerge.user.name %></th>
         <th><% if current_user.following?(messerge.user.id) %>
-          <%= link_to 'フォロー外す', unfollow_path(messerge.user.id), method: :POST %>
+          <%= link_to 'フォロー外す', unfollow_path(messerge.user.id), method: :POST, class:"btn btn-primary"  %>
         <% else %>
-          <%= link_to 'フォローする', follow_path(messerge.user.id), method: :POST %>
-        <% end %></th>
+          <%= link_to 'フォローする', follow_path(messerge.user.id), method: :POST, class:"btn btn-primary"  %>
+        <% end %>
+        </th>
         <td><%= messerge.comment %></td>
         <td><%= attachment_image_tag messerge, :image, :fill, 100, 100, format: 'jpeg'%></td>
         <td><%= button_to '消去', messerge, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %></td>
@@ -35,6 +32,7 @@
              <%= render partial: 'likes/like', locals: { messerge: messerge} %>
           </div>
   　　　　　</td>
+  　　　　　<td><%= link_to "コメント" ,messerge_path(messerge)%></td>
   　　　　　<td>いいね件数: <%= messerge.likes.count %></td>
       </tr>
     <% end %>
