--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,21 @@
 <div class="col-lg-10 text-center">
-  <h2 class="text-light">マイページ</h2>
-   <%= @user.name %>
-   <%= @user.introduction %>
+  <h2>マイページ</h2>
+   <h4><%= @user.name %></h4>
+   <h4><%= @user.introduction %></h4>
   <div class="">
     <%= link_to 'マイページ編集', edit_user_path(@user), class:"btn btn-primary" %>
   </div>
 
   <p class="text-light"><%= "フォロー数: #{@user.followers.count}" %></p>
   <p class="text-light"><%= "フォロワー数: #{@user.followings.count}" %></p>
+
   <% @user.messerges.each do |messerge| %>
-    <td><%= messerge.created_at.strftime("%Y年%m月%d日")%></td>
-    <td><%= messerge.comment %></td>
-    <td>いいね件数: <%= messerge.likes.count %></td>
+    <div class="d-block my">
+      <div class=""><%= messerge.created_at.strftime("%Y年%m月%d日")%></div>
+      <div><%= messerge.comment %></div>
+      <div></div>
+      <div>いいね件数: <%= messerge.likes.count %></div>
+      <div><%= attachment_image_tag messerge, :image, :fill, 200, 200, format: 'jpeg'%></div>
+    </div>
   <% end %>
 </div>
