--- a/app/views/messerges/show.html.erb
+++ b/app/views/messerges/show.html.erb
@@ -1,18 +1,21 @@
-<h3>質問に答える</h3>
-<%= @messerge.comment %>
+<div class="text-center">
+  <h3>コメント</h3>
+  <h4 class="my-4"><%= @messerge.comment %></h4>
+  <div class="my-3"><%= attachment_image_tag @messerge, :image, :fill, 300, 300, format: 'jpeg'%></div>
+  <%= form_with(model: @answer,url: messerge_answers_path(@messerge), local:true) do |f| %>
+    <%= f.text_area :content %>
+    <br>
+    <%= f.submit 'コメントする' %>
+  <% end %>
 
-<h2>コメント一覧</h2>
-<% @answers.each do |answer| %>
-  <div>
-    <%= answer %>
-    <hr>
-  </div>
-<% end %>
+  <%= link_to "戻る", messerges_path , class:"text-danger" %>
 
-<%= form_with(model: @answer,url: messerge_answers_path(@messerge), local:true) do |f| %>
-  <%= f.text_field :content %>
-  <br>
-  <%= f.submit 'コメントする' %>
-<% end %>
+  <h2>コメント一覧</h2>
+  <% @answers.each do |answer| %>
+    <div class="mx-5 text-left my-5">
+      <h4 class="ml-5"><%= answer.messerge.user.name %></h4>
+      <h5 class="ml-5"><%= answer.content %></h5>
+    </div>
+  <% end %>
 
-<%= link_to "ホームへ戻る", messerges_path %>
+</div>
