--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
 @import 'font-awesome';
 
 body {
-  background-image: url(top.jpg);
+  background-image: image-url("top.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
