--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>マイページ編集</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'マイページ', @user %> |
+<div class="text-center">
+    <h1>マイページ編集</h1>
+    <%= render 'form', user: @user %>
+    <%= link_to '戻る', @user %> 
+</div>
