--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -8,12 +8,14 @@
   <% @users.each do |user| %>
     <tr>
       <td><%= user.name %></td>
+      <% if not current_user == user %>
       <td><% if current_user.following?(user.id) %>
             <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST, class:"btn btn-primary" %>
           <% else %>
             <%= link_to 'フォローする', follow_path(user.id), method: :POST, class:"btn btn-primary"  %>
           <% end %>
       </td>
+      <% end %>
     </tr>
   <% end %>
 </div>
