--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,32 @@
-<div class="col-lg-10 text-center">
-  <h2>マイページ</h2>
-   <h4><%= @user.name %></h4>
-   <h4><%= @user.introduction %></h4>
-  <div class="">
-    <%= link_to 'マイページ編集', edit_user_path(@user), class:"btn btn-primary" %>
-  </div>
-
-  <p class="text-light"><%= "フォロー数: #{@user.followers.count}" %></p>
-  <p class="text-light"><%= "フォロワー数: #{@user.followings.count}" %></p>
-
-  <% @user.messerges.each do |messerge| %>
-    <div class="d-block my">
-      <div class=""><%= messerge.created_at.strftime("%Y年%m月%d日")%></div>
-      <div><%= messerge.comment %></div>
-      <div></div>
-      <div>いいね件数: <%= messerge.likes.count %></div>
-      <div><%= attachment_image_tag messerge, :image, :fill, 200, 200, format: 'jpeg'%></div>
+<div class="text-center mt-5 container">
+  <div class="row">
+    <div class="col-lg-6 text-center">
+      <h2>マイページ</h2>
+       <h4><%= @user.name %></h4>
+       <h4><%= @user.introduction %></h4>
+       <div class=""><%= link_to 'マイページ編集', edit_user_path(@user), class:"btn btn-primary" %></div>
+       <h3>ベストスコア<%= @minimum_total %></h3>
+      <p class="text-light my-5"><%=link_to "フォロー数: #{@user.followings.count}", following_path %></p>
+      <p class="text-light"><%=link_to "フォロワー数: #{@user.followers.count}", follower_path %></p>
+    
+      <% @user.messerges.each do |messerge| %>
+        <div class="d-block">
+          <div><%= messerge.created_at.strftime("%Y年%m月%d日")%></div>
+          <div><%= messerge.comment %></div>
+          <div>いいね件数: <%= messerge.likes.count %></div>
+          <div><%= attachment_image_tag messerge, :image, :fill, 200, 200, format: 'jpeg'%></div>
+        　<div><%= link_to "コメント" ,messerge_path(messerge)%></div>
+        </div>
+      <% end %>
     </div>
-  <% end %>
+
+    <div class="col-lg-6">
+      <% @user.scores.each do |score| %>
+        <h5 class="mt-5"><%= score.played_date %></h5>
+        <h3><%= score.course.golfCourseName %></h3>
+        <h3>トータルスコア<%= score.total %></h3>
+       
+      <% end %>
+    </div>
+  </div>    
 </div>
