--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,9 @@
   <div class="navbar navbar-light bg-light">
     <div class="container d-flex">
       <div class="navbar-brand d-flex align-items-center">
-
+<%=link_to root_path do %>
+  <i class="fas fa-golf-ball"></i>
+<% end %>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
