--- a/app/views/messerges/index.html.erb
+++ b/app/views/messerges/index.html.erb
@@ -17,33 +17,34 @@
     </div>
 
     <div class="col-lg-7">
-<div class="mt-5 text-center mx-5">
-  <div class="text-light mt-5 text-center">
-    <% @messerges.each do |messerge| %>
-      <div>
-        <h4><%= messerge.user.name %>
-        　　　　<% if current_user.following?(messerge.user.id) %>
-               <%= link_to 'フォロー外す', unfollow_path(messerge.user.id), method: :POST, class:"btn btn-primary"  %>
-             <% else %>
-               <%= link_to 'フォローする', follow_path(messerge.user.id), method: :POST, class:"btn btn-primary"  %>
-             <% end %>
-        </h4>
-        <div><%= messerge.comment %></div>
-        <div><%= attachment_image_tag messerge, :image, :fill, 100, 100, format: 'jpeg'%>
-             <%= link_to @messerge.video_url.to_s do %></td>
-               <%= video_tag(@messerge.video.to_s) %>
-             <% end %></div>
-        <div><%= button_to '消去', messerge, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %></div>
-        <div id="likes_buttons<%= messerge.id %>"><%= render partial: 'likes/like', locals: { messerge: messerge} %></div>
-  　　　　　<div><%= link_to "コメント" ,messerge_path(messerge)%></div>
-  　　　　<div>いいね件数: <%= messerge.likes.count %></div>
+      <div class="mt-5 text-center mx-5">
+        <div class="text-light mt-5 text-center">
+          <% @messerges.each do |messerge| %>
+            <div>
+              <h4><%= messerge.user.name %>
+                <% if not current_user == messerge.user %>
+              　　　　<% if current_user.following?(messerge.user.id) %>
+                     <%= link_to 'フォロー外す', unfollow_path(messerge.user.id), method: :POST, class:"btn btn-primary"  %>
+                   <% else %>
+                     <%= link_to 'フォローする', follow_path(messerge.user.id), method: :POST, class:"btn btn-primary"  %>
+                   <% end %>
+                <% end %>
+              </h4>
+              <div><%= messerge.comment %></div>
+              <div><%= attachment_image_tag messerge, :image, :fill, 100, 100, format: 'jpeg'%>
+                   <%= link_to @messerge.video_url.to_s do %></td>
+                     <%= video_tag(@messerge.video.to_s) %>
+                   <% end %>
+                   </div>
+              <%= button_to '削除', messerge_path(messerge), method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+              <div id="likes_buttons<%= messerge.id %>"><%= render partial: 'likes/like', locals: { messerge: messerge} %></div>
+        　　　　　<div><%= link_to "コメント" ,messerge_path(messerge)%></div>
+            </div>
+          <% end %>
+        </div>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
-
-</div>
-  </div>
-  </div>
 
 
