--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -1,5 +1,5 @@
 <div style="margin:0px;padding:0px;" align="center">
-  <h3>前半ホール</h3>
+  <h3><%= %></h3>
   <table width="500px" style="border-collapse: collapse;border:4px groove #000000;background-color:#FFFFFF;color:#000000;text-align:left;">
     <tbody>
       <tr>
@@ -24,29 +24,29 @@
       </tr>
     <%= form_with url: scores_path, model: @score, local: true do |f| %>
       <tr>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole1,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole2,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole3,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole4,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole5,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole6,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole7,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole8,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole9,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole10,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole11,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole12,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole13,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole14,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole15,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole16,:size=>"1", style: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole17,:size=>"1", qstyle: "border: none"%></td>
-        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole18,:size=>"1", style: "border: none"%></td>
-    　</tr>
-    　<%= f.hidden_field :played_date,{ value:@score.played_date } %>
-    　<%= f.hidden_field :course_id,{ value:@score.course_id } %>
-    　<%= f.submit 'お疲れさまでした！！',class: "btn btn-primary" %>
-    <% end %>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole1,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole2,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole3,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole4,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole5,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole6,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole7,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole8,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole9,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole10,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole11,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole12,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole13,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole14,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole15,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole16,:size=>"1", style: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole17,:size=>"1", qstyle: "border: none"%>打</td>
+        <td style="border:4px groove #000000;text-align:center;"><%= f.text_field :hole18,:size=>"1", style: "border: none"%>打</td>
+      </tr>
+    <%= f.hidden_field :played_date,{ value:@score.played_date } %>
+    <%= f.hidden_field :course_id,{ value:@score.course_id } %>
     </tbody>
   </table>
+  <div><%= f.submit 'ホール終了',class: "btn btn-primary" %></div>
+    <% end %>
 </div>
