--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,6 @@
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "つ") %> の項目が空白です。</h2>
-
       <ul>
       <% user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,22 +10,22 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field my-5">
     <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
 
-  <div class="field">
+  <div class="field my-5">
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
 
-  <div class="field">
+  <div class="field my-5">
     <%= f.label :introduction %>
     <%= f.text_area :introduction %>
   </div>
 
-  <div class="actions">
+  <div class="actions my-5">
     <%= f.submit "編集完了",class:"btn btn-primary" %>
   </div>
 <% end %>
