--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,17 +11,17 @@
   <% end %>
 
   <div class="field my-5">
-    <%= f.label :name %>
+    <div><%= f.label :name %></div>
     <%= f.text_field :name %>
   </div>
 
   <div class="field my-5">
-    <%= f.label :email %>
+    <div><%= f.label :email %></div>
     <%= f.text_field :email %>
   </div>
 
   <div class="field my-5">
-    <%= f.label :introduction %>
+    <div><%= f.label :introduction %></div>
     <%= f.text_area :introduction %>
   </div>
 
