--- a/app/views/messerges/index.html.erb
+++ b/app/views/messerges/index.html.erb
@@ -37,18 +37,20 @@
                    <%= link_to "コメント" ,messerge_path(messerge), class:"btn btn-success"%>
               </h4>
               <div class="text-break"><%= messerge.comment %></div>
-              <p><%= attachment_image_tag messerge, :image, size: "100x100", format: 'jpeg'%></p>
-              <div><%= link_to messerge.video_url.to_s do %>
-                     <%= video_tag(messerge.video.to_s, size: "500x300")%> 
-                     
-                   <% end %>
-              </div>
+              <% if not messerge.image.present? %>
+                <p><%= attachment_image_tag messerge, :image, size: "100x100", format: 'jpeg'%></p>
+                <div><%= link_to messerge.video_url.to_s do %>
+                       <%= video_tag(messerge.video.to_s, size: "500x300")%> 
+                     <% end %>
+                </div>
+              <% end %>
               <% if current_user == messerge.user %>
                 <%= button_to '削除', messerge_path(messerge), method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
               <% end %>
               <div id="likes_buttons<%= messerge.id %>"><%= render partial: 'likes/like', locals: { messerge: messerge} %></div>
             </div>
           <% end %>
+          <%= paginate @messerges %>
         </div>
       </div>
     </div>
