--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -54,6 +54,10 @@ div {
   margin-bottom: 20px;
   background-color: #f0f0f0;
 
+  h1{
+    color: #fff;
+  }
+
   h2 {
     text-align: left;
     font-weight: bold;
