--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,22 +4,22 @@
    <% end %>
 </div>
 <div class="golfcourse-block">
-  <h1>ラウンドするゴルフ場を選択</h1>
+  <h1 class="text-light">ラウンドするゴルフ場を選択</h1>
   <%= form_tag(courses_path,:method => 'get', local: true) do %>
-    <%= label :keyword, "ゴルフ場名を検索" %>
+    <%= label :keyword, "ゴルフ場名を検索", class:"text-light"%>
 	<%= text_field_tag :keyword, "" %>
-	<%= submit_tag 'ゴルフ場を検索', :golfcoursename => nil%>
+	<%= submit_tag 'ゴルフ場を検索', :golfcoursename => nil %>
   <% end %>
 </div>
 
 <%= form_with model: @score , url:scores_new_path ,local: true do |f| %>
-  <%= f.label :played_date, "ラウンドする日" %>
+  <%= f.label :played_date, "ラウンドする日", class:"text-light" %>
   <%= f.date_select :played_date %><br>
   <div id="search_result">
     <% @course.each do |course| %>
 	  <%= f.radio_button :course_id, course.id %>
-	  <p class=""><%= course.golfCourseName %></p>
-	  <div class=""><%= course.golfCourseCaption %></div>
+	  <p class="text-light"><%= course.golfCourseName %></p>
+	  <div class="text-light"><%= course.golfCourseCaption %></div>
   </div>
 	<% end %>
   <%= f.submit 'ラウンドを開始する',class: "btn btn-warning text-light mt-3" %>
