--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,8 +27,9 @@
   </div>
 
   <div class="text-center">
-    <%= f.submit "新規登録", class:"btn btn-primary btn-block col-lg-1 mx-auto" %>
+    <%= f.submit "新規登録", class:"btn btn-primary btn-block w-auto mx-auto" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+<div class="text-center">
+  <%= render "devise/shared/links" %>
+</div>
