--- a/app/views/messerges/index.html.erb
+++ b/app/views/messerges/index.html.erb
@@ -6,15 +6,15 @@
         <p><%= flash[:success] %></p>
       <% end %>
       </div>
-      <h1 class="text-center mt-5">質問投稿</h1>
+      <h1 class="text-center mt-5 text-light">質問投稿</h1>
       <%= form_with model:@messerge, local:true do |f| %>
         <h4 class="text-center mt-5"></h4>
         <div class="text-center mt-5">
-          <h4>内容</h4>
+          <h4 class="text-light">内容</h4>
           <%= f.text_area :comment %>
-          <h4>画像</h4>
+          <h4 class="text-light">画像</h4>
           <%= f.attachment_field :image %>
-          <h4>動画</h4>
+          <h4 class="text-light">動画</h4>
           <%= f.file_field :video, :accept => 'video/*' %>
           <div><%= f.submit '投稿', class:"btn btn-primary"%></div>
         </div>
