--- a/app/views/scores/result.html.erb
+++ b/app/views/scores/result.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center mt-5 container">
   <div class="row">
     <div class="col-lg-4">
-      <h3><%= @score.course.golfCourseName %></h3>
+      <h3 class="text-light"><%= @score.course.golfCourseName %></h3>
         <table width="1000" height="100" cellspacing="0">
             <tr align="center" bgcolor="#f0f8ff">
                 <td class="text-dark">1H</td>
@@ -46,7 +46,7 @@
         </table>
         </div> 
     </div>    
-    <h3>トータルスコア<%= @total %></h3>
+    <h3 class="text-light">トータルスコア<%= @total %></h3>
 </div>
-<h3 class="text-center mt-5">お疲れさまでした！！</h3>
+<h3 class="text-center mt-5 text-light">お疲れさまでした！！</h3>
 
