--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,13 +1,13 @@
 <div class="text-center">
-  <h1>ユーザー検索</h1>
+  <h1 class="text-light">ユーザー検索</h1>
   <%= form_with url: search_users_path, method: :get, local: true do |f| %>
     <%= f.text_field :name %>
     <%= f.submit :search, class:"btn btn-primary" %>
   <% end %>
-  <h4>ユーザー名</h4>
+  <h4 class="text-light">ユーザー名</h4>
   <% @users.each do |user| %>
     <tr>
-      <td><%= user.name %></td>
+      <h3><%= user.name %></h3>
       <% if not current_user == user %>
       <td><% if current_user.following?(user.id) %>
             <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST, class:"btn btn-primary" %>
