--- a/app/views/messerges/show.html.erb
+++ b/app/views/messerges/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-10 text-center text-break">
-      <h3>コメント</h3>
-      <h4 class="my-4"><%= @messerge.comment %></h4>
+      <h3 class="text-light">コメント</h3>
+      <h4 class="my-4 text-light"><%= @messerge.comment %></h4>
       <div class="my-3"><%= attachment_image_tag @messerge, :image, size: "300x300", format: 'jpeg'%></div>
       <div><%= link_to @messerge.video_url.to_s do %>
              <%= video_tag(@messerge.video.to_s, size: "500x300") %>
@@ -16,11 +16,11 @@
     
       <%= link_to "戻る", messerges_path , class:"text-danger" %>
     
-      <h2>コメント一覧</h2>
+      <h2 class="text-light">コメント一覧</h2>
       <% @answers.each do |answer| %>
         <div class="mx-5 text-left my-5">
-          <h4 class="ml-5"><%= answer.messerge.user.name %></h4>
-          <h5 class="ml-5"><%= answer.content %></h5>
+          <h4 class="ml-5 text-light"><%= answer.messerge.user.name %></h4>
+          <h5 class="ml-5 text-light"><%= answer.content %></h5>
         </div>
       <% end %>
     </div>
